@@ -249,7 +249,26 @@ public class StrictConneg extends Conneg {
      * @return The score.
      */
     public float scoreMediaType(MediaType mediaType) {
-        return scoreMetadata(mediaType, getMediaTypePrefs());
+        float result = -1.0F;
+        float current;
+
+        if (mediaType != null) {
+            for (Preference<MediaType> pref : getMediaTypePrefs()) {
+                if (pref.getMetadata().includes(mediaType, false)) {
+                    current = pref.getQuality();
+                } else {
+                    current = -1.0F;
+                }
+
+                if (current > result) {
+                    result = current;
+                }
+            }
+        } else {
+            result = 0.0F;
+        }
+
+        return result;
     }
 
     /**
